--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
   {% include contact.html %}
   {% endif %}
 
+  {% include impressum.html %}
+  
   {% include footer.html %}
   {% include modals.html %}
   {% include js.html %}
