--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,7 @@
           <a href="#contact">Kontakt</a>
         </li>
         <li class="page-scroll">
-          <a href="#contact">Impressum</a>
+          <a href="#impressum">Impressum</a>
         </li>
       </ul>
     </div>
