kontakt hübsch gemacht

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,11 +9,25 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-        <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-        <div class="col-lg-4">
-          <p>Am besten per Mail: <a href="mailto:meine-mail@posteo.de">meine-mail@posteo.de</a></p>
+        <div class="col-lg-12">
+          <h5>So finden wir zusammen</h5>
+          <p class="text-justify">Wenn Sie sich vorstellen können, dass ich Sie bei Ihrem individuellen Anliegen
+            unterstützen kann, dann lade ich Sie ein, mich kennen zu lernen. Nehmen Sie Kontakt auf und lassen Sie uns
+            reden. Rufen Sie mich an, schreiben Sie mir eine Mail oder kontaktieren Sie mich über Soziale Netzwerke. Ich
+            freue mich darauf Sie kennen zu lernen.</a></p>
+          <p>&nbsp;</p>
         </div>
+        <div class="col-lg-5">
+          <p>Am besten erreichen Sie mich per Mail:</p>
+          <p><a href="mailto:meine-mail@posteo.de">meine-mail@posteo.de</a></p>
+        </div>
+        <div class="col-lg-1">
+           </div>
+        <div class="col-lg-6">
+          <p>Oder Sie rufen mich an unter:</p>
+          <p>0176 20501156</p>
+        </div>
+
       </div>
     </div>
   </div>
