footer hübsch gemacht

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,8 +16,8 @@
           <ul class="list-inline">
             {% for network in site.social %}
             <li>
-              <a href="{{ network.url }}" class="btn-social btn-outline"><i
-                  class="fa-brands fa-fw fa-{{ network.title }}"></i></a>
+              <a href="{{ network.url }}" target="_blank" class="btn-social-icon btn-lg"><i
+                  class="fa-brands fa-2xl fa-{{ network.title }}"></i></a>
             </li>
             {% endfor %}
           </ul>
