--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -19,7 +19,7 @@
         </div>
         <div class="col-lg-5">
           <p>Am besten erreichen Sie mich per Mail:</p>
-          <p><a href="mailto:meine-mail@posteo.de">meine-mail@posteo.de</a></p>
+          <p><a href="mailto:sweta@sweta-moser.de">sweta@sweta-moser.de</a></p>
         </div>
         <div class="col-lg-1">
            </div>
