--- a/_includes/impressum.html
+++ b/_includes/impressum.html
@@ -23,7 +23,7 @@
 
                         <h5>Kontakt:</h5>
                         <p class="small">Telefon: 0176-20501156<br>
-                            E-Mail: <a href='mailto:sweta.moser@posteo.de'>sweta.moser@posteo.de</a></br>
+                            E-Mail: <a href='mailto:webmaster@sweta-moser.de'>webmaster@sweta-moser.de</a></br>
                         </p>
 
                         <p class="text-justify">
